#
#  Copyright (C) 2001-2016 Olof Hagsand
#
#  This file is part of CLIgen.
#
#  CLIgen is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 2, or (at your option)
#  any later version.
#
#  CLIgen is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with CLIgen; see the file COPYING.

- type_max2str - get max value of a type
	
- Added doxygen reference and function call documentation. Just do 'make doc' 
  and direct your browser to doc/index.html

- Fixed parse bugs for some choices syntax, eg <a choice:1.0|length> did not work.

- Merge sub-trees with original trees containing same symbols. Eg a cligen-spec:
	"a @TREE; a b;"
  if TREE contains the symbol 'b', the two 'b:s' were not merged properly.

- Allow CR/LF in help-texts

R3.5.0 December 2014
====================

Extended type system with signed and unsigned ints: int8, int16,
int32, int64, uint8, uint16, uint32, uint64.
You need to to the following in your code:
Rename all cligen syntax types.
        int      -> int32
        number   -> int32
For example in cli syntax files: <x:int> -> <x:int32>.
'int' will remain as an alias for int32.

Rename types :
	CGV_INT  -> CGV_INT32
	CGV_LONG -> CGV_INT64
Rename cv access functions:
	 cv_int_get -> cv_int32_get
	 cv_int_set -> cv_int32_set
	 cv_long_get -> cv_int64_get
	 cv_long_set -> cv_int64_set
For the new int types, see Section 5.1 in the CLIgen tutorial

A new decimal64 type is added. Decimal64 defined in the YANG standard
(RFC6020) is a 64-bit integer with a fraction-index numbers defining a
number of decimals. For example, a decimal64 with 4 fraction-index is