@@ -1,5 +1,5 @@
 #
-#  Copyright (C) 2001-2016 Olof Hagsand
+#  Copyright (C) 2001-2017 Olof Hagsand
 #
 #  This file is part of CLIgen.
 #
@@ -16,8 +16,12 @@
 #  You should have received a copy of the GNU General Public License
 #  along with CLIgen; see the file COPYING.
 
+- Added option for "relaxed" handling of variable matching. So that 
+eg <a:string length[4]> | <a:string length[40]> is allowed. 
+See cligen_match_cgvar_same().
+
 - type_max2str - get max value of a type
-	
+
 - Added doxygen reference and function call documentation. Just do 'make doc' 
   and direct your browser to doc/index.html
 
